LPS-21585 Prevent Firefox from collapsing the container div

--- a/portal-web/docroot/html/portlet/document_library/css/main.css
+++ b/portal-web/docroot/html/portlet/document_library/css/main.css
@@ -578,5 +578,9 @@
 		.aui-audio-node {
 			height: 28px;
 		}
+
+		div.aui-video-node {
+			height: 100%;
+		}
 	}
 }
